deployment/api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: cloudwp
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        imagePullPolicy: Always
        image: ghcr.io/haw-cloud-wp/haw-cloudwp-openapi:dev
        ports:
        - containerPort: 80
