deployment/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cloudwp
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
